@@ -21,6 +21,7 @@ namespace evf{
       , pid_(-1)
       , alive_(-1000)
       , restart_countdown_(0)
+      , restart_count_(0)
       , save_nbp_(0)
       , save_nba_(0)
       , save_ndqm_(0)
@@ -34,6 +35,7 @@ namespace evf{
       , mqm_(new MasterQueue(monitor_queue_offset_+ind))
       , mqs_(new MasterQueue(ind))
       , restart_countdown_(0)
+      , restart_count_(0)
       , save_nbp_(0)
       , save_nba_(0)
       , save_ndqm_(0)
@@ -50,6 +52,7 @@ namespace evf{
       , mqm_(b.mqm_)
       , mqs_(b.mqs_)
       , restart_countdown_(b.restart_countdown_)
+      , restart_count_(b.restart_count_)
       , reported_inconsistent_(b.reported_inconsistent_)
       {
       }
@@ -121,7 +124,8 @@ namespace evf{
     bool inInconsistentState() const {return reported_inconsistent_;}
     void setReasonForFailed(std::string r){reasonForFailed_ = r;}
     void setReportedInconsistent(){reported_inconsistent_ = true;}
-    unsigned int &countdown(){return restart_countdown_;}
+    int &countdown(){return restart_countdown_;}    
+    unsigned int &restartCount(){return restart_count_;}
     int get_save_nbp() const {return save_nbp_;}
     int get_save_nba() const {return save_nba_;}
     static const unsigned int monitor_queue_offset_ = 200;
@@ -136,7 +140,8 @@ namespace evf{
     SlaveQueue*                    sqs_; 
     std::string reasonForFailed_;
     struct prg prg_;
-    unsigned int restart_countdown_;
+    int restart_countdown_;
+    unsigned int restart_count_;
 
     int save_nbp_;
     int save_nba_;
